--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "github-action-telegram",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
-    "build": "ncc build index.js -C -m -o dist"
+    "build": "ncc build ./src/index.ts -w -o dist"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/sarkisovTu/github-action-telegram#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@vercel/ncc": "^0.36.1"
+    "@actions/github": "^5.1.1",
+    "@types/node-telegram-bot-api": "^0.57.6",
+    "@vercel/ncc": "^0.36.1",
+    "node-telegram-bot-api": "^0.61.0",
+    "typescript": "^4.9.5"
   }
 }
