--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node-telegram-bot-api": "^0.57.6",
     "@vercel/ncc": "^0.36.1",
     "node-telegram-bot-api": "^0.61.0",
+    "octokit": "^2.0.14",
     "typescript": "^4.9.5"
   }
 }
